--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "npm": "7.*"
   },
   "devDependencies": {
+    "@snowpack/plugin-dotenv": "^2.2.0",
     "@snowpack/plugin-svelte": "^3.7.0",
     "prettier": "^2.3.2",
     "snowpack": "^3.8.8",
